# RUS_Backend

./: .gitignore
docs/: DevelopmentGuide.md  DocExample.md  README.md
docs/rus_sim_force/: rus_sim_force.md
docs/rus_sim_planner/: rus_sim_planner.md
install/: local_setup.sh  setup.sh
install/fairino10_v6_moveit2_config/share/fairino10_v6_moveit2_config/: local_setup.sh  package.sh
install/fairino16_v6_moveit2_config/share/fairino16_v6_moveit2_config/: package.sh
install/fairino20_v6_moveit2_config/share/fairino20_v6_moveit2_config/: local_setup.sh  package.sh
install/fairino30_v6_moveit2_config/share/fairino30_v6_moveit2_config/: package.sh
install/fairino3_v6_moveit2_config/share/fairino3_v6_moveit2_config/: local_setup.sh  package.sh
install/fairino3mt_v6_moveit2_config/share/fairino3mt_v6_moveit2_config/: package.sh
install/fairino5_v6_moveit2_config/share/fairino5_v6_moveit2_config/: package.sh
install/fairino_description/share/fairino_description/: local_setup.sh  package.sh
install/fairino_hardware/lib/: libfairino.so.2
install/fairino_hardware/lib/fairino_hardware/: srv_test_client
install/fairino_hardware/share/fairino_hardware/: local_setup.sh  package.sh
install/fairino_msgs/include/fairino_msgs/fairino_msgs/msg/detail/: robot_nonrt_state__functions.c  robot_nonrt_state__struct.h  robot_nonrt_state__traits.hpp  robot_nonrt_state__type_support.c
install/fairino_msgs/local/lib/python3.10/dist-packages/fairino_msgs/msg/: _robot_nonrt_state_s.c
install/fairino_msgs/share/fairino_msgs/: local_setup.sh  package.sh
log/: latest_build
src/frcobot_ros2/fairino_hardware/include/fairino_hardware/: version_control.h
src/frcobot_ros2/fairino_hardware/libfairino/lib/: libfairino.so.2
src/rus_sim_controller/: CMakeLists.txt  package.xml
src/rus_sim_data_fusion/: CMakeLists.txt  package.xml
src/rus_sim_force/: CMakeLists.txt  package.xml
src/rus_sim_force/config/: wrench_params.yaml
src/rus_sim_force/include/rus_sim_force/: wrench_estimate.hpp  wrench_pub_node.hpp
src/rus_sim_force/src/: main.cpp
src/rus_sim_force/src/rus_sim_force/: wrench_estimate.cpp  wrench_pub_node.cpp
src/rus_sim_force/test/src/: test_wrench_estimate_pinocchio.cpp
src/rus_sim_force/test/test_include/: test_wrench_estimate_pinocchio.hpp
src/rus_sim_interfaces/: CMakeLists.txt
src/rus_sim_interfaces/action/: ScanTask.action
src/rus_sim_interfaces/msg/: ScanPath.msg  UltrasoundFrame.msg
src/rus_sim_interfaces/srv/: PauseScan.srv
src/rus_sim_perception/: CMakeLists.txt
src/rus_sim_planner/: CMakeLists.txt  package.xml
src/rus_sim_planner/include/rus_sim_planner/: trajectory_planner.hpp  trajectory_planner_node.hpp
src/rus_sim_planner/src/: main.cpp
src/rus_sim_planner/src/rus_sim_planner/: trajectory_planner.cpp  trajectory_planner_node.cpp
src/rus_sim_planning/src/rus_sim_planning/: trajectory_planner.cpp
src/rus_sim_pointcloud/: CMakeLists.txt  package.xml
src/rus_sim_pointcloud/include/rus_sim_pointcloud/: point_cloud_node.hpp  point_cloud_preprocess.hpp
src/rus_sim_pointcloud/src/: main.cpp
src/rus_sim_pointcloud/src/rus_sim_pointcloud/: point_cloud_node.cpp  point_cloud_preprocess.cpp
src/rus_sim_pointcloud/src/test/: point_cloud_generator.cpp
src/rus_sim_pointcloud/test/src/: point_cloud_generator.cpp
src/rus_sim_task_executor/: CMakeLists.txt  package.xml
src/rus_sim_task_executor/include/rus_sim_task_executor/: scan_state.hpp  scan_state_machine.hpp
src/rus_sim_task_executor/src/rus_sim_task_executor/: scan_state_machine.cpp
